--- a/mta.yaml
+++ b/mta.yaml
@@ -17,7 +17,7 @@ modules:
    type: java
    path: srv
    parameters:
-      memory: 1024M
+      memory: 768M
    provides:
     - name: srv_api
       properties:
@@ -25,10 +25,11 @@ modules:
    requires:
     - name: flightjourney-hdi-container
       properties:
-         JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
-            {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
+         JBP_CONFIG_RESOURCE_CONFIGURATION:
+           tomcat/webapps/ROOT/META-INF/context.xml:
+             service_name_for_DefaultDB: ~{hdi-container-name}
 
- 
+
 
 resources:
  - name: flightjourney-hdi-container
