--- a/mta.yaml
+++ b/mta.yaml
@@ -7,11 +7,10 @@ modules:
    type: hdb
    path: db
    parameters:
-     buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git#v1.6.24
      memory: 256M
      disk-quota: 256M
    requires:
-     - name: flightjourney-hdi-container
+     - name: flightjourney-hdi
 
  - name: flightjourney-srv
    type: java
@@ -23,7 +22,7 @@ modules:
       properties:
          url: ${default-url}
    requires:
-    - name: flightjourney-hdi-container
+    - name: flightjourney-hdi
       properties:
          JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
             {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
@@ -47,7 +46,7 @@ modules:
     - name: uaa_flightjourney
 
 resources:
- - name: flightjourney-hdi-container
+ - name: flightjourney-hdi
    properties:
      hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
