--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "@sap/grunt-sapui5module-bestpractice-build": "^0.0.14"
+    "@sap/grunt-sapui5module-bestpractice-build": "1.x"
   },
   "dependencies": {
     "@sap/approuter": "5.2.0"
