--- a/srv/src/main/webapp/META-INF/java_xs_buildpack/config/resource_configuration.yml
+++ b/srv/src/main/webapp/META-INF/java_xs_buildpack/config/resource_configuration.yml
@@ -1,3 +1,3 @@
 ---
 tomcat/webapps/ROOT/META-INF/context.xml:
-  service_name_for_DefaultDB: flightjourney-hdi-container
+  service_name_for_DefaultDB: flightjourney-hdi2
