Exclude connection.properties from war
Otherwise Gateway would use it (with prio over VCAP_SERVICES) and
stumble over potentially wrong data.

--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -54,6 +54,12 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<packagingExcludes>**/connection.properties*</packagingExcludes>
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
@@ -73,7 +79,6 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
-						<version>3.0.0</version>
 						<configuration>
 							<webResources combine.children="append">
 								<resource>
