First try with S/4

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 .classpath
 .mta/
 .project
-.settings/
+srv/.settings/.jsdt*
+srv/.settings/org.eclipse.m2e.*
+srv/.settings/org.eclipse.wst.*
 .xmake/
 edmx/
 gen/
