--- a/mta.yaml
+++ b/mta.yaml
@@ -26,6 +26,8 @@ modules:
       properties:
          JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
             {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
+    - name: flightjourney-dest
+    - name: flightjourney-uaa
 
  - name: app
    type: html5
@@ -43,7 +45,7 @@ modules:
          strictSSL: false
          name: srv_api
          url: ~{url}
-    - name: uaa_flightjourney
+    - name: flightjourney-uaa
 
 resources:
  - name: flightjourney-hdi2
@@ -51,9 +53,14 @@ resources:
      hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
 
- - name: uaa_flightjourney
+ - name: flightjourney-uaa
    parameters:
       path: ./xs-security.json
       service-plan: application
    type: com.sap.xs.uaa
 
+ - name: flightjourney-dest
+   parameters:
+      service: destination
+      service-plan: lite
+   type: org.cloudfoundry.managed-service
