--- a/mta.yaml
+++ b/mta.yaml
@@ -1,18 +1,18 @@
 _schema-version: "2.0.0"
-ID: flightjourney
+ID: spacetravel
 version: 1.0.0
 
 modules:
- - name: flightjourney-db
+ - name: spacetravel-db
    type: hdb
    path: db
    parameters:
      memory: 256M
      disk-quota: 256M
    requires:
-     - name: flightjourney-hdi2
+     - name: spacetravel-hdi
 
- - name: flightjourney-srv
+ - name: spacetravel-srv
    type: java
    path: srv
    parameters:
@@ -22,12 +22,12 @@ modules:
       properties:
          url: ${default-url}
    requires:
-    - name: flightjourney-hdi2
+    - name: spacetravel-hdi
       properties:
          JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
             {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
-    - name: flightjourney-dest
-    - name: flightjourney-uaa
+    - name: spacetravel-dest
+    - name: spacetravel-uaa
 
  - name: app
    type: html5
@@ -45,21 +45,21 @@ modules:
          strictSSL: false
          name: srv_api
          url: ~{url}
-    - name: flightjourney-uaa
+    - name: spacetravel-uaa
 
 resources:
- - name: flightjourney-hdi2
+ - name: spacetravel-hdi
    properties:
      hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
 
- - name: flightjourney-uaa
+ - name: spacetravel-uaa
    parameters:
       path: ./xs-security.json
       service-plan: application
    type: com.sap.xs.uaa
 
- - name: flightjourney-dest
+ - name: spacetravel-dest
    parameters:
       service: destination
       service-plan: lite
