--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -9,21 +9,14 @@
 		<version>1.18.0</version>
 	</parent>
 	<groupId>com.sap.cloudsamples.spaceflight</groupId>
-	<artifactId>spaceflight-srv-java</artifactId>
+	<artifactId>spacetravel-srv</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<properties>
 		<packageName>${project.groupId}</packageName>
 	</properties>
 	<dependencies>
-<!-- 		<dependency>
-			<groupId>com.sap.cloud.s4hana</groupId>
-			<artifactId>sdk-bom</artifactId>
-			<version>${sdk.bom.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
- -->	</dependencies>
+</dependencies>
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<plugins>
