Move reuseCsv script to model module

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "spaceflight-model": "git://github.wdf.sap.corp/te18/cloud-samples-spaceflight"
   },
   "scripts": {
-    "build": "cds build --clean && npm run reuseCSV",
-    "reuseCSV": "node db/reuseCSV.js"
+    "build": "cds build --clean && reuseTableData"
   },
   "license": "ISC"
 }
