--- a/db/package.json
+++ b/db/package.json
@@ -4,7 +4,9 @@
 		"@sap/hdi-deploy": "3.7.0"
 	},
 	"scripts": {
-		"postinstall": "node build.js",
-		"start": "node node_modules/@sap/hdi-deploy/deploy.js  --auto-undeploy"
+		"build": "node build.js",
+		"postinstall": "npm run build",
+		"deploy": "npm run build && cf push -f manifest.yml",
+		"start": "node node_modules/@sap/hdi-deploy/deploy.js --auto-undeploy --treat-unmodified-as-modified"
 	}
 }
