Remove reuse capabilities

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "spaceflight",
   "version": "0.1.0",
   "dependencies": {
-    "@sap/cds": "git://github.wdf.sap.corp/cdx/cds",
-    "spaceflight-model": "git://github.wdf.sap.corp/te18/cloud-samples-spaceflight"
+    "@sap/cds": "git://github.wdf.sap.corp/cdx/cds"
   },
   "devDependencies": {
     "npm-watch": "^0.3.0"
@@ -16,7 +15,7 @@
     }
   },
   "scripts": {
-    "build": "cds build --clean && reuseTableData",
+    "build": "cds build --clean",
     "watch": "npm-watch"
   },
   "license": "ISC"
