--- a/package.json
+++ b/package.json
@@ -4,19 +4,8 @@
   "dependencies": {
     "@sap/cds": "2.x"
   },
-  "devDependencies": {
-    "npm-watch": "^0.3.0"
-  },
-  "watch": {
-    "build": {
-      "patterns": ["db", "srv"],
-      "extensions": "cds",
-      "inherit": true
-    }
-  },
   "scripts": {
-    "build": "cds build --clean",
-    "watch": "npm-watch"
+    "build": "cds build --clean"
   },
   "license": "ISC"
 }
