Enforce latest compiler

--- a/db/package.json
+++ b/db/package.json
@@ -7,6 +7,6 @@
 		"build": "node build.js",
 		"postinstall": "npm run build",
 		"deploy": "npm run build && cf push -f manifest.yml",
-		"start": "node node_modules/@sap/hdi-deploy/deploy.js --auto-undeploy --treat-unmodified-as-modified"
+		"start": "node node_modules/@sap/hdi-deploy/deploy.js --treat-unmodified-as-modified"
 	}
 }
