--- a/mta.yaml
+++ b/mta.yaml
@@ -9,7 +9,7 @@ modules:
    parameters:
      memory: 256M
    requires:
-     - name: spacetravel-hdi
+     - name: spacetravel-hana
 
  - name: srv
    type: java
@@ -21,12 +21,11 @@ modules:
       properties:
          url: ${default-url}
    requires:
-    - name: spacetravel-hdi
+    - name: spacetravel-hana
       properties:
          JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
             {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
     - name: spacetravel-dest
-    - name: spacetravel-uaa
 
  - name: spacetravel-app
    type: html5
@@ -43,19 +42,12 @@ modules:
          strictSSL: false
          name: srv_api
          url: ~{url}
-    - name: spacetravel-uaa
 
 resources:
- - name: spacetravel-hdi
+ - name: spacetravel-hana
    properties:
      hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
-
- - name: spacetravel-uaa
-   parameters:
-      path: ./xs-security.json
-      service-plan: application
-   type: com.sap.xs.uaa
 
  - name: spacetravel-dest
    parameters:
