Add UAA back, with dedicated name

--- a/mta.yaml
+++ b/mta.yaml
@@ -25,6 +25,7 @@ modules:
       properties:
          JBP_CONFIG_RESOURCE_CONFIGURATION: '[tomcat/webapps/ROOT/META-INF/context.xml:
             {"service_name_for_DefaultDB" : "~{hdi-container-name}"}]'
+    - name: spacetravel-TechEd2018_CNA376-TechEd2018-devX
     - name: spacetravel-dest
 
  - name: spacetravel-app
@@ -48,6 +49,11 @@ resources:
    properties:
      hdi-container-name: ${service-name}
    type: com.sap.xs.hdi-container
+
+  - name: spacetravel-TechEd2018_CNA376-TechEd2018-devX
+    parameters:
+      service-plan: application
+    type: com.sap.xs.uaa
 
  - name: spacetravel-dest
    parameters:
