Use 'existing-service' instead of typed service
This makes sure future IDE version will not try to manage the service instance.

--- a/mta.yaml
+++ b/mta.yaml
@@ -58,7 +58,5 @@ resources:
    type: org.cloudfoundry.managed-service
 
  - name: spacetravel-uaa
-   parameters:
-      service-plan: application
-   type: com.sap.xs.uaa
+   type: org.cloudfoundry.existing-service
    # create with: cf cs xsuaa application spacetravel-uaa -c '{"xsappname":"spacetravel-uaa-<space>", "tenant-mode":"dedicated" }'
