--- a/mta.yaml
+++ b/mta.yaml
@@ -15,7 +15,7 @@ modules:
    type: java
    path: srv
    parameters:
-      memory: 768M
+      memory: 1G
    provides:
     - name: srv_api
       properties:
