Set ALLOW_MOCKED_AUTH_HEADER
See https://blogs.sap.com/2017/05/21/step-4-with-sap-s4hana-cloud-sdk-calling-an-odata-service/

--- a/mta.yaml
+++ b/mta.yaml
@@ -16,6 +16,8 @@ modules:
    path: srv
    parameters:
       memory: 1G
+   properties:
+      ALLOW_MOCKED_AUTH_HEADER: true   # Allows fetching destinations w/o uaa. Don't use in production!
    provides:
     - name: srv_api
       properties:
