--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
-    "@sap/grunt-sapui5module-bestpractice-build": "1.x"
+    "@sap/grunt-sapui5-bestpractice-build": "1.3.64"
   },
   "dependencies": {
-    "@sap/approuter": "5.2.0"
+    "@sap/approuter": "5.11.0"
   },
   "scripts": {
     "start": "node node_modules/@sap/approuter/approuter.js"
