Make imported CSN work with 3.7/1.10 CDS

--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "scripts": {
     "build": "cds build --clean"
   },
-  "license": "SEE LICENSE IN LICENSE"
+  "license": "SEE LICENSE IN LICENSE",
+  "cds": {
+    "cdsc": {
+      "newCsn": true
+    }
+  }
 }
